Update playground to use cellarg.min.js

--- a/site/playground.html
+++ b/site/playground.html
@@ -7,7 +7,7 @@
 	
 	<link rel="stylesheet" href="styles/styles.css">
 	<link rel="stylesheet" href="styles/playground.css">
-	<script src="scripts/cellarg.js"></script>
+	<script src="scripts/cellarg.min.js"></script>
 	<script src="scripts/playground.js"></script>
 </head>
 <body>
