--- a/site/playground.html
+++ b/site/playground.html
@@ -8,7 +8,7 @@
 	<link rel="stylesheet" href="styles/styles.css">
 	<link rel="stylesheet" href="styles/playground.css">
 	
-	<script src="scripts/cellarg.min.js"></script>
+	<script src="scripts/cellarg.js"></script>
 	<script src="scripts/cursor.min.js"></script>
 	<script src="scripts/editor.js"></script>
 	<script src="scripts/playground.js"></script>
@@ -33,7 +33,8 @@
 	<i class="ri-skip-forward-fill button small debug"></i>
 	<i class="ri-menu-unfold-fill button small jump" style="justify-self: end;"></i> -->
 	
-	<i class="ri-save-fill button save right"></i>
+	<i class="ri-file-2-fill button new right"></i>
+	<i class="ri-save-fill button save"></i>
 	<i class="ri-folder-5-fill button files right-end"></i>
 </div>
 
@@ -44,7 +45,11 @@
 		<div class="separator"></div>
 		
 		<div class="console">
-			<span class="output">Press the run button up top!</span>
+			<pre class="output">Press the run button up top!</pre>
+			<div class="input">
+				&gt;&nbsp;<span contenteditable tabindex=0></span>
+			</div>
+			<pre class="execution-info"></pre>
 		</div>
 	</div>
 </div>
