Refactor projects menu

--- a/site/playground.html
+++ b/site/playground.html
@@ -58,7 +58,8 @@
 	<span class="title">Projects</span>
 	<div class="files">
 		<span class="category">Examples</span>
-		<span class="file example hello-world">Hello World</span>
+		<span class="file example" data-example="Hello World">Hello World</span>
+		<span class="file example" data-example="Truth machine">Truth machine</span>
 		<span class="category">Saved projects</span>
 	</div>
 </div>
