--- a/src/site/playground.html
+++ b/src/site/playground.html
@@ -3,6 +3,13 @@
 <head>
 	<title>CellArg Playground</title>
 	
+	<meta name="title" content="CellArg Playground">
+	<meta name="description" content="CellArg is a probably turing-complete esoteric programming language with cell based memory. ">
+	<meta name="keywords" content="cellarg, esolang">
+	<meta name="robots" content="index, follow">
+	<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+	<meta name="language" content="English">
+	
 	<link href="https://cdn.jsdelivr.net/npm/remixicon@2.5.0/fonts/remixicon.css" rel="stylesheet">
 	
 	<link rel="stylesheet" href="styles/styles.css">
